Changed nFrames,nChannels,nRows,nCols, nZ(previously, nLevs) to int data type. Updated code to avoid use of deprecated constructors.